load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_path")

gazelle_binary(
    name = "gazelle-protobuf",
    languages = [
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        # must be after the proto extension (order matters)
        "@build_stack_rules_proto//language/protobuf",
    ],
)

# gazelle:prefix github.com/api-definitions/keyval

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-protobuf",
)

# To get good autocomplete in VS Code for protobufs, use the solution from
# https://stackoverflow.com/questions/55411277/how-can-i-setup-vscode-for-go-project-built-with-bazel
go_path(
    name = "gopath_for_vscode",
    mode = "link",
    deps = [
        "//proto:keyvalpb_go_proto",
    ],
)
