load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "grpc_keyval_server",
    embed = [":grpc_keyval_server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "grpc_keyval_server_lib",
    srcs = ["grpc_keyval_server.go"],
    importpath = "github.com/api-definitions/keyval/go/cmd/grpc_keyval_server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)
