load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "grpc_keyval_server",
    embed = [":grpc_keyval_server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "grpc_keyval_server_lib",
    srcs = ["grpc_keyval_server.go"],
    importpath = "github.com/api-definitions/keyval/go/cmd/grpc_keyval_server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/memserver",
        "//go/keyvalpb",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)
