load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_world_lib",
    srcs = ["helllo_world.go"],
    importpath = "github.com/api-definitions/keyval/go/cmd/hello_world",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_binary(
    name = "hello_world",
    embed = [":hello_world_lib"],
    visibility = ["//visibility:public"],
)
