load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "examplelib",
    srcs = ["examplelib.go"],
    importpath = "github.com/api-definitions/keyval/go/internal/examplelib",
    visibility = ["//go:__subpackages__"],
    deps = [
        "//go/keyvalpb",
        "@com_github_golang_glog//:glog",
    ],
)
