load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "memserver",
    srcs = ["memserver.go"],
    importpath = "github.com/api-definitions/keyval/go/internal/memserver",
    visibility = ["//go:__subpackages__"],
    deps = [
        "//go/keyvalpb",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
